fixed some minor formatting issues on smaller screens + updated resume

--- a/src/build.css
+++ b/src/build.css
@@ -806,11 +806,6 @@ object {
   margin-bottom: 4vh;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .-mb-\[3vh\] {
   margin-bottom: -3vh;
 }
@@ -845,10 +840,6 @@ object {
 
 .-ml-\[9\%\] {
   margin-left: -9%;
-}
-
-.-mr-4 {
-  margin-right: -1rem;
 }
 
 .-mt-14 {
@@ -911,6 +902,50 @@ object {
   margin-top: auto;
 }
 
+.-ml-96 {
+  margin-left: -24rem;
+}
+
+.-ml-\[26rem\] {
+  margin-left: -26rem;
+}
+
+.-ml-48 {
+  margin-left: -12rem;
+}
+
+.-ml-56 {
+  margin-left: -14rem;
+}
+
+.-ml-60 {
+  margin-left: -15rem;
+}
+
+.-ml-3 {
+  margin-left: -0.75rem;
+}
+
+.-ml-8 {
+  margin-left: -2rem;
+}
+
+.-ml-36 {
+  margin-left: -9rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
+.ml-12 {
+  margin-left: 3rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -967,10 +1002,6 @@ object {
   height: 4rem;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
 .h-32 {
   height: 8rem;
 }
@@ -981,10 +1012,6 @@ object {
 
 .h-6 {
   height: 1.5rem;
-}
-
-.h-72 {
-  height: 18rem;
 }
 
 .h-8 {
@@ -1024,6 +1051,10 @@ object {
   height: 100vh;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
 .max-h-8 {
   max-height: 2rem;
 }
@@ -1038,11 +1069,6 @@ object {
 
 .max-h-full {
   max-height: 100%;
-}
-
-.max-h-fit {
-  max-height: -moz-fit-content;
-  max-height: fit-content;
 }
 
 .min-h-60 {
@@ -1118,14 +1144,6 @@ object {
   width: 100vw;
 }
 
-.w-48 {
-  width: 12rem;
-}
-
-.w-auto {
-  width: auto;
-}
-
 .max-w-10 {
   max-width: 2.5rem;
 }
@@ -1142,41 +1160,16 @@ object {
   max-width: 30rem;
 }
 
-.max-w-\[90\%\] {
-  max-width: 90%;
+.max-w-\[75\%\] {
+  max-width: 75%;
 }
 
 .max-w-lg {
   max-width: 32rem;
 }
 
-.max-w-fit {
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-}
-
-.max-w-full {
-  max-width: 100%;
-}
-
-.max-w-\[80\%\] {
-  max-width: 80%;
-}
-
-.max-w-\[75\%\] {
-  max-width: 75%;
-}
-
-.flex-shrink {
-  flex-shrink: 1;
-}
-
 .flex-grow {
   flex-grow: 1;
-}
-
-.flex-grow-\[2\] {
-  flex-grow: 2;
 }
 
 .grow {
@@ -1249,11 +1242,11 @@ object {
 
 @keyframes nav-load {
   0%, 100% {
-    border-width: 4px;
+    border-bottom-width: 4px;
   }
 
   50% {
-    border-width: 0px;
+    border-bottom-width: 0px;
   }
 }
 
@@ -1309,8 +1302,8 @@ object {
   resize: both;
 }
 
-.grid-flow-col {
-  grid-auto-flow: column;
+.grid-flow-row {
+  grid-auto-flow: row;
 }
 
 .grid-cols-2 {
@@ -1321,8 +1314,8 @@ object {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-rows-5 {
-  grid-template-rows: repeat(5, minmax(0, 1fr));
+.grid-rows-7 {
+  grid-template-rows: repeat(7, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -1381,6 +1374,10 @@ object {
   gap: 0.25rem;
 }
 
+.gap-12 {
+  gap: 3rem;
+}
+
 .gap-16 {
   gap: 4rem;
 }
@@ -1397,16 +1394,12 @@ object {
   gap: 1rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-\[17rem\] {
-  gap: 17rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .gap-x-4 {
@@ -1450,8 +1443,8 @@ object {
   border-radius: 0.75rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.border-0 {
+  border-width: 0px;
 }
 
 .border-2 {
@@ -1603,14 +1596,14 @@ object {
   padding: 1.5rem;
 }
 
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-56 {
-  padding-left: 14rem;
-  padding-right: 14rem;
 }
 
 .px-8 {
@@ -1626,16 +1619,6 @@ object {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
 }
 
 .pl-4 {
@@ -1666,10 +1649,6 @@ object {
   padding-top: 2rem;
 }
 
-.pr-6 {
-  padding-right: 1.5rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1695,16 +1674,6 @@ object {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
 }
 
 .text-\[22vh\] {
@@ -1740,6 +1709,16 @@ object {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .leading-none {
@@ -1793,11 +1772,6 @@ object {
   --tw-shadow: inset 0 -20px 30px 0 rgb(255 248 19 / 0.25);
   --tw-shadow-colored: inset 0 -20px 30px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-black\/25 {
-  --tw-shadow-color: rgb(0 0 0 / 0.25);
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .shadow-yellow {
@@ -1978,6 +1952,10 @@ object {
     margin-left: -18rem;
   }
 
+  .md\:-mr-4 {
+    margin-right: -1rem;
+  }
+
   .md\:mb-\[2vh\] {
     margin-bottom: 2vh;
   }
@@ -1998,8 +1976,28 @@ object {
     margin-top: 3rem;
   }
 
-  .md\:-mr-4 {
-    margin-right: -1rem;
+  .md\:-ml-80 {
+    margin-left: -20rem;
+  }
+
+  .md\:-ml-\[31\.5rem\] {
+    margin-left: -31.5rem;
+  }
+
+  .md\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .md\:-ml-36 {
+    margin-left: -9rem;
+  }
+
+  .md\:-ml-24 {
+    margin-left: -6rem;
+  }
+
+  .md\:-ml-12 {
+    margin-left: -3rem;
   }
 
   .md\:h-12 {
@@ -2022,6 +2020,10 @@ object {
     height: 4.5rem;
   }
 
+  .md\:h-32 {
+    height: 8rem;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -2030,20 +2032,12 @@ object {
     width: 91.666667%;
   }
 
-  .md\:w-\[32\.5\%\] {
-    width: 32.5%;
-  }
-
   .md\:w-64 {
     width: 16rem;
   }
 
-  .md\:max-w-\[90\%\] {
-    max-width: 90%;
-  }
-
-  .md\:max-w-full {
-    max-width: 100%;
+  .md\:w-\[32\.5\%\] {
+    width: 32.5%;
   }
 
   .md\:scale-100 {
@@ -2064,8 +2058,48 @@ object {
     justify-content: center;
   }
 
-  .md\:gap-0 {
-    gap: 0px;
+  .md\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .md\:gap-48 {
+    gap: 12rem;
+  }
+
+  .md\:gap-24 {
+    gap: 6rem;
+  }
+
+  .md\:gap-12 {
+    gap: 3rem;
+  }
+
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+
+  .md\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .md\:gap-56 {
+    gap: 14rem;
+  }
+
+  .md\:gap-64 {
+    gap: 16rem;
+  }
+
+  .md\:gap-72 {
+    gap: 18rem;
+  }
+
+  .md\:gap-\[17rem\] {
+    gap: 17rem;
+  }
+
+  .md\:gap-\[16\.5rem\] {
+    gap: 16.5rem;
   }
 
   .md\:px-12 {
@@ -2078,14 +2112,14 @@ object {
     padding-right: 5rem;
   }
 
-  .md\:py-48 {
-    padding-top: 12rem;
-    padding-bottom: 12rem;
-  }
-
   .md\:px-56 {
     padding-left: 14rem;
     padding-right: 14rem;
+  }
+
+  .md\:py-48 {
+    padding-top: 12rem;
+    padding-bottom: 12rem;
   }
 
   .md\:pr-\[33rem\] {
@@ -2115,6 +2149,16 @@ object {
     line-height: 2.5rem;
   }
 
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+  }
+
   .md\:text-\[18rem\] {
     font-size: 18rem;
   }
@@ -2127,16 +2171,6 @@ object {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .md\:text-8xl {
-    font-size: 6rem;
-    line-height: 1;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 
   .md\:\*\:text-base > * {
@@ -2162,6 +2196,28 @@ object {
   margin-bottom: 0.25rem;
 }
 
+.\[\&\>\*\]\:-my-1>* {
+  margin-top: -0.25rem;
+  margin-bottom: -0.25rem;
+}
+
+.\[\&\>\*\]\:-my-2>* {
+  margin-top: -0.5rem;
+  margin-bottom: -0.5rem;
+}
+
+@media (min-width: 768px) {
+  .md\:\[\&\>\*\]\:-my-0\.5>* {
+    margin-top: -0.125rem;
+    margin-bottom: -0.125rem;
+  }
+
+  .md\:\[\&\>\*\]\:-my-1>* {
+    margin-top: -0.25rem;
+    margin-bottom: -0.25rem;
+  }
+}
+
 .\[\&\>h3\]\:text-\[2vh\]>h3 {
   font-size: 2vh;
 }
@@ -2171,10 +2227,6 @@ object {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-}
-
-.\[\&_h2\]\:h-full h2 {
-  height: 100%;
 }
 
 .\[\&_h2\]\:text-3xl h2 {
